# lte-drone-simulation-ns3-gazebo-ros

./: .gitignore  Dockerfile  README.md  build-image.sh  build-netsim.sh  build-ros-nodes.sh  configure-mesa.sh  copy-animation.sh  debugger_config.config  download-world.sh  install-colcon.sh  install-gazebo.sh  install-ninja.sh  install-ns3.sh  install-ros-and-ros-gz-bridge.sh  run-gazebo.sh  setup-ros-network-node.sh  sim_and_bridge_clean.launch.py  variables.sh  world.sdf
docs/: architecture.dot
remote_server_nodes/: autonomous_pilot.py  diagonal_pilot.py  follow_cam.py  quadcopter_pilot.py  rl_pilot.py  rl_plotter.py  rl_test.py  setup.py  setup_remote_server_nodes.sh
ros_network/: CMakeLists.txt  main.cc  ros_node.cc  ros_node.h
scripts/: CMakeLists.txt  main.cc
signal_strength/: CMakeLists.txt  SignalStrengthPlugin.cc  SignalStrengthPlugin.hh  SignalStrengthPlugin.qml  SignalStrengthPlugin.qrc  install_custom_gz_plugin.sh
worlds/: world.sdf  world_with_waypoints.sdf
